--- a/index.html
+++ b/index.html
@@ -226,39 +226,21 @@
         <h2 class="visually-hidden">Нижнее навигационное меню и контакты</h2>
         <a href="#" class="large-logo">Техномарт</a>
         <ul class="site-navigation">
-          <li>
-            <a href="#" class="bottom-infoblock-link">Компания</a>
-          </li>
-          <li>
-            <a href="#" class="bottom-infoblock-link">Новости</a>
-          </li>
-          <li>
-            <a href="catalog.html" class="bottom-infoblock-link">Каталог</a>
-          </li>
-          <li>
-            <a href="#" class="bottom-infoblock-link">Доставка</a>
-          </li>
-          <li>
-            <a href="#" class="bottom-infoblock-link">Контакты</a>
-          </li>
+          <li><a href="#" class="bottom-infoblock-link">Компания</a></li>
+          <li><a href="#" class="bottom-infoblock-link">Новости</a></li>
+          <li><a href="catalog.html" class="bottom-infoblock-link">Каталог</a></li>
+          <li><a href="#" class="bottom-infoblock-link">Доставка</a></li>
+          <li><a href="#" class="bottom-infoblock-link">Контакты</a></li>
         </ul>
         <address class="bottom-infoblock-contacts">
           <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
           <a href="tel:+78005558628">+7 800 555-86-28</a>
         </address>
         <ul class="product-categories-list">
-          <li class="product-categories-list-item">
-            <a href="#">Материалы</a>
-          </li>
-          <li class="product-categories-list-item">
-            <a href="#">Техника</a>
-          </li>
-          <li class="product-categories-list-item">
-            <a href="#">Инструмент</a>
-          </li>
-          <li class="product-categories-list-item">
-            <a href="#">Спецпредложения</a>
-          </li>
+          <li class="product-categories-list-item"><a href="#">Материалы</a></li>
+          <li class="product-categories-list-item"><a href="#">Техника</a></li>
+          <li class="product-categories-list-item"><a href="#">Инструмент</a></li>
+          <li class="product-categories-list-item"><a href="#">Спецпредложения</a></li>
         </ul>
       </section>
     </main>
