--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body class="page-body">
-    <header class="main-header">
+    <header class="main-header container">
       <div class="header-top-row">
         <a href="#" class="small-logo">Техномарт</a>
         <form action="https://echo.htmlacademy.ru" method="post" class="search-form">
@@ -31,19 +31,27 @@
           </li>
         </ul>
       </div>
-      <p class="short-site-description">Интернет-магазин строительных материалов и инструментов для ремонта</p>
-      <div class="header-contacts">
-        <a href="tel:+78005558628" class="header-phonenumber">+7 800 555-86-28</a>
-        <p class="header-address">г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
+      <div class="header-middle-row-grid-container">
+        <p class="short-site-description">
+          Интернет-магазин
+          <br>
+          строительных материалов
+          <br>
+          и инструментов для ремонта
+        </p>
+        <div class="header-contacts">
+          <a href="tel:+78005558628" class="header-phonenumber">+7 800 555-86-28</a>
+          <p class="header-address">г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p>
+        </div>
+        <ul class="personal-account-buttons">
+          <li>
+            <button type="button" class="login-button">Войти</button>
+          </li>
+          <li>
+            <a href="#" class="signup-button">Регистрация</a>
+          </li>
+        </ul>
       </div>
-      <ul class="personal-account-buttons">
-        <li>
-          <button type="button" class="login-button">Войти</button>
-        </li>
-        <li>
-          <a href="#" class="signup-button">Регистрация</a>
-        </li>
-      </ul>
       <nav class="main-navigation">
         <ul class="site-navigation">
           <li><a href="#">Главная</a></li>
@@ -60,23 +68,6 @@
       <h1 class="visually-hidden">Интернет-магазин Техномарт - Главная</h1>
       <section class="promo-products-and-services">
         <h2 class="visually-hidden">Промо-блок: товары и услуги</h2>
-        <div class="slider">
-          <div class="slide">
-            <h3 class="slider-header">Перфораторы</h3>
-            <p class="slider-description">Настоящие мужские игрушки</p>
-            <img src="img/man-with-perforator.jpg" width="620" height="266" alt="Мужчина долбит бетонную стену перфоратором">
-          </div>
-          <div class="slide">
-            <h3 class="slider-header">Дрели</h3>
-            <p class="slider-description">Соседям на радость!</p>
-            <img src="img/man-with-drill.jpg" width="620" height="266" alt="Мужчина сверлит кирпичную стену дрелью">
-          </div>
-          <button type="button" class="slider-button-left"><img src="img/icon-left.svg" width="22" height="40" alt="Стрелка влево"></button>
-          <button type="button" class="slider-button-right"><img src="img/icon-right.svg" width="22" height="40" alt="Стрелка вправо"></button>
-          <button type="button" name="drills" class="slider-radio-marker" disabled></button>
-          <button type="button" name="perforators" class="slider-radio-marker"></button>
-          <a href="catalog.html" class="button">Открыть каталог</a>
-        </div>
         <ul class="products-and-services-list">
           <li class="products-and-services-item ">
             <h3 class="products-and-services-item-header">Материалы</h3>
@@ -86,19 +77,38 @@
           <li class="products-and-services-item">
             <h3 class="products-and-services-item-header">Инструмент</h3>
             <a href="#" class="products-and-services-button">На все случаи</a>
-            </li>
+          </li>
           <li class="products-and-services-item">
             <h3 class="products-and-services-item-header">Техника</h3>
             <a href="#" class="products-and-services-button">Для стройки</a>
-            </li>
+          </li>
+          <li class="products-and-services-item-slider">
+            <div class="slider">
+              <div class="slide">
+                <h3 class="slider-header">Перфораторы</h3>
+                <p class="slider-description">Настоящие мужские игрушки</p>
+                <img src="img/man-with-perforator.jpg" width="620" height="266" alt="Мужчина долбит бетонную стену перфоратором">
+              </div>
+              <div class="slide visually-hidden">
+                <h3 class="slider-header">Дрели</h3>
+                <p class="slider-description">Соседям на радость!</p>
+                <img src="img/man-with-drill.jpg" width="620" height="266" alt="Мужчина сверлит кирпичную стену дрелью">
+              </div>
+              <button type="button" class="slider-button-left"><img src="img/icon-left.svg" width="22" height="40" alt="Стрелка влево"></button>
+              <button type="button" class="slider-button-right"><img src="img/icon-right.svg" width="22" height="40" alt="Стрелка вправо"></button>
+              <button type="button" name="drills" class="slider-radio-marker" disabled></button>
+              <button type="button" name="perforators" class="slider-radio-marker"></button>
+              <a href="catalog.html" class="button">Открыть каталог</a>
+            </div>
+          </li>
           <li class="products-and-services-item">
             <h3 class="products-and-services-item-header">Скидки 50%</h3>
             <a href="#" class="products-and-services-button">На 350 товаров</a>
-            </li>
+          </li>
           <li class="products-and-services-item">
             <h3 class="products-and-services-item-header">Доставка</h3>
             <a href="#" class="products-and-services-button">Бесплатно</a>
-            </li>
+          </li>
         </ul>
       </section>
       <section class="featured-products">
@@ -176,56 +186,60 @@
         </ul>
       </section>
       <section class="services">
-        <h2 class="second-level-title">Сервисы</h2>
+        <h2 class="second-level-title services-title">Сервисы</h2>
         <p class="text-normal">Хороший интернет-магазин отличается от плохого не только ценами!</p>
         <p class="text-normal">Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-        <ul class="services-list">
-          <li class="services-list-item">
-            <a href="#" class="services-list-item-link">Доставка</a>
-          </li>
-          <li class="services-list-item">
-            <a href="#" class="services-list-item-link">Гарантия</a>
-          </li>
-          <li class="services-list-item">
-            <a href="#" class="services-list-item-link">Кредит</a>
-          </li>
-        </ul>
-        <div class="service service-delivery">
-          <h3 class="service-title">Доставка</h3>
-          <p class="text-normal">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
-        </div>
-        <div class="service service-warranty">
-          <h3 class="service-title">Гарантия</h3>
-          <p class="text-normal">Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
-        </div>
-        <div class="service service-credit">
-          <h3 class="service-title">Кредит</h3>
-          <p class="text-normal">Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
-          <a href="#" class="button">Отправить заявку</a>
+        <div class="services-grid-container">
+          <ul class="services-list">
+            <li class="services-list-item">
+              <a href="#" class="services-list-item-link">Доставка</a>
+            </li>
+            <li class="services-list-item">
+              <a href="#" class="services-list-item-link">Гарантия</a>
+            </li>
+            <li class="services-list-item">
+              <a href="#" class="services-list-item-link">Кредит</a>
+            </li>
+          </ul>
+          <div class="service service-delivery">
+            <h3 class="service-title">Доставка</h3>
+            <p class="text-normal">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+          </div>
+          <div class="service service-warranty visually-hidden">
+            <h3 class="service-title">Гарантия</h3>
+            <p class="text-normal">Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
+          </div>
+          <div class="service service-credit visually-hidden">
+            <h3 class="service-title">Кредит</h3>
+            <p class="text-normal">Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
+            <a href="#" class="button">Отправить заявку</a>
+          </div>
         </div>
       </section>
-      <section class="about-company">
-        <h2 class="second-level-title">Компания «Техномарт»</h2>
-        <p class="text-normal">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-        <p class="text-normal">Мы можем доставить ваш товар в самые отдаленные точки России!</p>
-        <p class="text-normal">Техномарт работает со многими транспортными компаниями:</p>
-        <ul class="shipping-companies-list">
-          <li class="shipping-companies-list-item text-large">Деловые динии</li>
-          <li class="shipping-companies-list-item text-large">Автотрейдинг</li>
-          <li class="shipping-companies-list-item text-large">ЖелДорЭкспедиция</li>
-        </ul>
-        <a href="#" class="button">Подробнее о компании</a>
-      </section>
-      <section class="contacts">
-        <h2 class="second-level-title">Контакты</h2>
-        <p class="text-normal">Вы можете забрать товар сами, заехав в наш офис:</p>
-        <a href="#"><img src="img/minimap.png" width="300" height="158" alt="Карта со схемой проезда"></a>
-        <a href="#" class="button">Заблудились? Напишите нам!</a>
-      </section>
+      <div class="secondary-container">
+        <section class="about-company">
+          <h2 class="second-level-title">Компания «Техномарт»</h2>
+          <p class="text-normal">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+          <p class="text-normal">Мы можем доставить ваш товар в самые отдаленные точки России!</p>
+          <p class="text-normal">Техномарт работает со многими транспортными компаниями:</p>
+          <ul class="shipping-companies-list">
+            <li class="shipping-companies-list-item text-large">Деловые динии</li>
+            <li class="shipping-companies-list-item text-large">Автотрейдинг</li>
+            <li class="shipping-companies-list-item text-large">ЖелДорЭкспедиция</li>
+          </ul>
+          <a href="#" class="button">Подробнее о компании</a>
+        </section>
+        <section class="contacts">
+          <h2 class="second-level-title">Контакты</h2>
+          <p class="text-normal">Вы можете забрать товар сами, заехав в наш офис:</p>
+          <a href="#"><img src="img/minimap.png" width="300" height="158" alt="Карта со схемой проезда"></a>
+          <a href="#" class="button">Заблудились? Напишите нам!</a>
+        </section>
+      </div>
       <section class="bottom-infoblock">
         <h2 class="visually-hidden">Нижнее навигационное меню и контакты</h2>
         <a href="#" class="large-logo">Техномарт</a>
-        <ul class="site-navigation">
+        <ul class="site-navigation-secondary">
           <li><a href="#" class="bottom-infoblock-link">Компания</a></li>
           <li><a href="#" class="bottom-infoblock-link">Новости</a></li>
           <li><a href="catalog.html" class="bottom-infoblock-link">Каталог</a></li>
@@ -244,24 +258,33 @@
         </ul>
       </section>
     </main>
-    <footer class="main-footer">
-      <p class="footer-text">© 2010–2021 Компания «Техномарт»</p>
-      <p class="footer-text">Все права защищены</p>
-      <ul class="social-links-list">
-        <li class="social-links-list-item">
-          <a href="#" class="social-button"><img src="img/vk-logo.svg" width="44" height="44" alt="Вконтакте"></a>
-        </li>
-        <li class="social-links-list-item">
-          <a href="#" class="social-button"><img src="img/facebook-logo.svg" width="44" height="44" alt="Фейсбук"></a>
-        </li>
-        <li class="social-links-list-item">
-          <a href="#" class="social-button"><img src="img/instagram-logo.svg" width="44" height="44" alt="Инстаграм"></a>
-        </li>
-      </ul>
-      <p class="footer-text">Обратная связь:</p>
-      <a href="mailto:mail@htmlacademy.ru" class="footer-link">mail@htmlacademy.ru</a>
-      <p class="footer-text">Разработано —</p>
-      <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer-link">htmlacademy.ru</a>
+    <footer class="main-footer container">
+      <div class="footer-grid-column">
+        <p class="footer-text">
+          © 2010–2021 Компания «Техномарт»
+          <br>
+          Все права защищены
+        </p>
+      </div>
+      <div class="footer-grid-column">
+        <ul class="social-links-list">
+          <li class="social-links-list-item">
+            <a href="#" class="social-button"><img src="img/vk-logo.svg" width="44" height="44" alt="Вконтакте"></a>
+          </li>
+          <li class="social-links-list-item">
+            <a href="#" class="social-button"><img src="img/facebook-logo.svg" width="44" height="44" alt="Фейсбук"></a>
+          </li>
+          <li class="social-links-list-item">
+            <a href="#" class="social-button"><img src="img/instagram-logo.svg" width="44" height="44" alt="Инстаграм"></a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-grid-column">
+        <p class="footer-text">Обратная связь:</p>
+        <a href="mailto:mail@htmlacademy.ru" class="footer-link">mail@htmlacademy.ru</a>
+        <p class="footer-text">Разработано —</p>
+        <a href="https://htmlacademy.ru/intensive/htmlcss" class="footer-link">htmlacademy.ru</a>
+      </div>
     </footer>
     <section class="modal modal-feedback">
       <h2 class="visually-hidden">Форма обратной связи</h2>
